# pyIVLS

./: .gitignore  Affine.html  LICENSE  README.md  Tests.py  all_plugins.ini  bsdsa  debug.py  environment.yml  main.py  pyIVLS copy.ini  pyIVLS.code-workspace  pyIVLS.ini  pyIVLS.py  pyIVLS.req  pyIVLS_GUI.py  pyIVLS_GUI.ui  pyIVLS_constants.py  pyIVLS_container.py  pyIVLS_copy_all.ini  pyIVLS_pluginloader.py  pyIVLS_seqBuilder.py  pyproject.toml  quicktest.py  requirements.txt  simple_plotter.py  specSMU.ini  sweepIvSpecSMU.json  template.json  temporary_serial_scanner.py  test.json  test.py  testSpectrum  test_window.py
components/: MplCanvas.py  plugin_components.py  pyIVLS_dockWindow.py  pyIVLS_hookspec.py  pyIVLS_mainWindow.py  pyIVLS_mdiWindow.py  pyIVLS_pluginloader.ui  pyIVLS_seqBuilder.ui  threadStopped.py  worker_thread.py
configurations/: all_plugins.ini  specSMU.ini
docs/: contributing.md  plugin_api.md  sweep_tutorial.md
plugins/: howTo.md  plugin.py  plugin_components.py  pyIVLS_Affine.py  pyIVLS_Keithley.py  pyIVLS_Keithley2612B.py  pyIVLS_SpecSMU.py  pyIVLS_Sutter.py  pyIVLS_TLCCS.py  pyIVLS_Test.py  pyIVLS_VenusUSB2.py  pyIVLS_conDetect.py  pyIVLS_hookspec.py  pyIVLS_itc503.py  pyIVLS_peltierController.py  pyIVLS_pluginTemplate.py  pyIVLS_runSweep.py  pyIVLS_sweep.py  pyIVLS_timeIV.py  pyIVLS_tlccs.py
tests/: test_affine.py  test_affine_skimage.py  test_collision_detection.py  test_keithley2612b.py  test_pluggy_api.py  test_plugin_components.py  test_spectimeiv_utils.py  test_touchDetect.py  test_venususb2.py  test_venususb2gui.py
(+643 files in other folders)
