[project]
name = "pyivls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "datetime==5.5",
    "fonttools==4.55.3",
    "gpib-ctypes>=0.3.0",
    "ifaddr==0.2.0",
    "kiwisolver==1.4.8",
    "klayout>=0.30.1",
    "matplotlib==3.10.0",
    "numpy==2.2.1",
    "opencv-python==4.10.0.84",
    "packaging==24.2",
    "pandas>=2.3.0",
    "pathvalidate==3.2.3",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "psutil==7.0.0",
    "pyftdi>=0.56.0",
    "pyparsing==3.2.1",
    "pyqt6>=6.9.0",
    "pyqt6-qt6>=6.8.1",
    "pyqt6-sip>=13.9.1",
    "pyserial==3.5",
    "pytest>=8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-usbtmc==0.8",
    "pytz==2025.1",
    "pyusb==1.3.1",
    "pyvisa==1.14.1",
    "pyvisa-py==0.7.2",
    "scikit-image>=0.25.2",
    "seabreeze>=2.10.1",
    "setuptools>=78.1.1",
    "six==1.17.0",
    "typing-extensions==4.12.2",
    "uv>=0.9.6",
    "zeroconf==0.137.2",
    "zope-interface==7.2",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
addopts = "-v"

[tool.ruff]
line-length = 200 


